# cdk-with-poetry-example

./: README.md  app.py  pyproject.toml
cdk_with_poetry/: cdk_with_poetry_stack.py
tests/unit/: test_cdk_with_poetry_stack.py
